backend/crates/orbit-log/tests/compile_fail/export.stderr
error[E0277]: the trait bound `Export: SafeToLog` is not satisfied
 --> tests/compile_fail/export.rs:7:5
  |
7 |     event!(Level::Info, "export_ready", export = e);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     the trait `SafeToLog` is not implemented for `Export`
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `SafeToLog`:
            &'static str
            SafeString
            bool
            i128
            i16
            i32
            i64
            i8
          and $N others
note: required by a bound in `assert_safe_to_log`
 --> src/lib.rs
  |
  | pub fn assert_safe_to_log<T: ?Sized + SafeToLog>(v: &T) -> &T {
  |                                       ^^^^^^^^^ required by this bound in `assert_safe_to_log`
  = note: this error originates in the macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Export: SafeToLog` is not satisfied
 --> tests/compile_fail/export.rs:7:5
  |
7 |     event!(Level::Info, "export_ready", export = e);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SafeToLog` is not implemented for `Export`
  |
  = help: the following other types implement trait `SafeToLog`:
            &'static str
            SafeString
            bool
            i128
            i16
            i32
            i64
            i8
          and $N others
  = note: required for the cast from `&Export` to `&dyn SafeToLog`
  = note: this error originates in the macro `event` (in Nightly builds, run with -Z macro-backtrace for more info)
